--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 }
 
 .css-slider .s1 {
-  background-image: url('img/univer.jpeg');
+  background-image: url('img/univer1.jpeg');
   animation-delay: 0s;
 }
 
@@ -58,7 +58,7 @@
 }
 
 .css-slider .s3 {
-  background-image: url('img/univer.jpeg');
+  background-image: url('img/univer3.jpeg');
   animation-delay: 8s;
 }
 
@@ -203,5 +203,6 @@ Top Universities
 </script>
 </body>
 </html>
+
 
 
