--- a/index.html
+++ b/index.html
@@ -48,17 +48,17 @@
 }
 
 .css-slider .s1 {
-  background-image: url('img/univer1.jpeg');
+  background-image: url('img/univer.jpeg');
   animation-delay: 0s;
 }
 
 .css-slider .s2 {
-  background-image: url('img/univer2.jpeg');
+  background-image: url('img/univer1.jpeg');
   animation-delay: 4s;
 }
 
 .css-slider .s3 {
-  background-image: url('img/univer3.jpeg');
+  background-image: url('img/univer.jpeg');
   animation-delay: 8s;
 }
 
@@ -203,6 +203,7 @@ Top Universities
 </script>
 </body>
 </html>
+
 
 
 
